# internbootcamp_v2

./: .gitignore  container_report.tex  deploy_vllm.sh  pyproject.toml  rectangle_report.tex  run_MM_eval.sh  run_text_eval.sh  stop_vllm.sh  test_qwen_vl.sh  test_r1.sh  test_vllm_api.sh
container/: extract_example.py  generate_data_and_plots.py  model_comparison_table.tex  qwen2.5_vl_72b_prompt_2.txt  qwen2.5_vl_72b_response_1.txt  qwen2.5_vl_72b_response_2.txt
internbootcamp.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
outputs/: deepseek-r1.txt  qwen2.5-vl-72B-inst.txt
outputs/DeepSeek-R1/: eval_results_20251205210940.csv  eval_results_20251205223349.csv
outputs/DeepSeek-R1-2*2/: eval_results_20251205164256.csv  eval_results_20251205171052.csv
outputs/DeepSeek-R1-4*4/: eval_results_20251205142418.csv
outputs/DeepSeek-R1-40*40/: eval_results_20251205140543.csv
outputs/DeepSeek-R1-6*6/: eval_results_20251205154354.csv
outputs/DeepSeek-R1-60*60/: eval_results_20251205160041.csv
outputs/DeepSeek-R1-80*80/: eval_results_20251205150758.csv  eval_results_20251205152256.csv
outputs/DeepSeek-V3/: eval_results_20251206110846.csv  eval_results_20251206111009.csv
outputs/QwQ-32B/: eval_results_20251206123315.csv  eval_results_20251206124242.csv
outputs/Qwen3-0.6B/: eval_results_20251205225348.csv  (+1 more)
rectangle/: ablation_table.tex  deepseek_r1_prompt_1.txt  deepseek_r1_prompt_2.txt  deepseek_r1_response_1.txt  deepseek_r1_response_2.txt  extract_example.py  generate_ablation_table.py  generate_model_comparison.py  model_comparison_table.tex
(+78 files in other folders)
