# -------------------------------
# build-system
# -------------------------------
[build-system]
requires = [
    "setuptools>=61.0",
    "wheel"
]
build-backend = "setuptools.build_meta"

# -------------------------------
# project (PEP 621 metadata)
# -------------------------------
[project]
name = "internbootcamp"
version = "2.0.0"
description = "internbootcamp"
readme = {file = "README.md", content-type = "text/markdown"}
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "internbootcamp v2.0.0 Team"}
]

dependencies = [
    "datasets>=4.4.1",
    "jsonlines>=4.0.0",
    "openai>=2.8.1",
    # Add dependencies as needed
    "psutil>=7.1.3",
    "reasoning-gym>=0.1.24",
    "starlette>=0.50.0",
    "tenacity>=9.1.2",
    "transformers>=4.57.3",
    "verl>=0.6.1",
    "vllm>=0.11.2",
]

# -------------------------------
# tool.setuptools - Additional config
# -------------------------------
[tool.setuptools]
include-package-data = true

[tool.setuptools.package-dir]
"" = "."

